--- a/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
@@ -464,27 +464,28 @@
  
   
   </div>
-  <!--  
+    <h4>Varialble importance plot. Pathways important for separation between MAN and no side effect in random forest model</h4> 
   <center>
-  <img src='/media/report-portal/gsk_prj2_1d/Comb.png' width='800px'/>
-  <h4>Combined set features</h4>
+  <img src='/media/report-portal/gsk_prj2_1d/varImp.EndothelialCells.bool.png' width='800px'/>
+  <h4>Endothelial Cells</h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/SM.png' width='800px'/>
-  <h4>SM set features Day 1</h4>
+  <img src='/media/report-portal/gsk_prj2_1d/varImp.SmoothMuscle.bool.png' width='800px'/>
+  <h4>Smooth Muscle </h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/EC.png' width='800px'/>
-  <h4>EC set features Day 1</h4>
+  <img src='/media/report-portal/gsk_prj2_1d/varImp.EndothelialCells.fillone.png' width='800px'/>
+  <h4>Endothelial Cells</h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/CEC.png' width='800px'/>
-  <h4>CEC set features Day 1</h4>
+  <img src='/media/report-portal/gsk_prj2_1d/varImp.SmoothMuscle.fillone.png' width='800px'/>
+  <h4>Smooth Muscle</h4>
   <br/><br/>
   
   
   </center>
-   -->       
+         
+       
 </div>  <!-- end of hide div -->
 <!------------- End of Pathway Analysis -->
 
