--- a/oncoFinder2/templates/report/gsk_prj2_4d_high.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_high.html
@@ -461,6 +461,7 @@
  
   
   </div>
+  {%if 'gsk_prj2_' in report.slug %}
   <h4>Varialble importance plot. Pathways important for separation between MAN and no side effect in random forest model</h4> 
   <center>
   <img src='/media/report-portal/gsk_prj2_1d/varImp.EndothelialCells.bool.png' width='800px'/>
@@ -472,16 +473,16 @@
   <br/><br/>
   
   <img src='/media/report-portal/gsk_prj2_1d/varImp.EndothelialCells.fillone.png' width='800px'/>
-  <h4>Endothelial Cells</h4>
+  <h4>Endothelial Cells (exended dataset)</h4>
   <br/><br/>
   
   <img src='/media/report-portal/gsk_prj2_1d/varImp.SmoothMuscle.fillone.png' width='800px'/>
-  <h4>Smooth Muscle</h4>
+  <h4>Smooth Muscle (exended dataset)</h4>
   <br/><br/>
   
   
   </center>
-         
+{%endif%}         
 </div>  <!-- end of hide div -->
 <!------------- End of Pathway Analysis -->
 
