add Deep learning to gsk_l1000 9

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -91,13 +91,15 @@
 </center>
 
 <div id='hide_genes' style='display:none;'> <!-- Div to hide and load on button click -->
+{%if 'above-and-beyond' in report.slug %}
 <center>
 <img src='/media/report-portal/above-and-beyond/gene1.png' />
 <h4>PCA plot with outlier</h4>
 <br/>
 <img src='/media/report-portal/above-and-beyond/gene2.png' />
 <h4>PCA plot without outlier</h4>
-</center>          
+</center>
+{%endif%}          
    <!-- GENE Nav tabs -->      
    <ul class="nav nav-tabs" role="tablist">
      {%for group in report.genegroup_set.all%}
