add pics to gsk_prj3 1

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -78,22 +78,22 @@
 
 {%if 'dmso' in report.slug %}
 <center>
-<img src='/media/report-portal/gsk_prj3_dmso/prj3_dmso.png' />
+<img src='/media/report-portal/gsk_prj3_dmso/prj3_dmso.png' style="width:800px"/>
 </center>
 {%endif%}
 {%if 'prj3_l1k' in report.slug %}
 <center>
-<img src='/media/report-portal/gsk_prj3_l1k/prj3_l1k.png' />
+<img src='/media/report-portal/gsk_prj3_l1k/prj3_l1k.png' style="width:800px"/>
 </center>
 {%endif%}
 {%if 'prj3_mm' in report.slug %}
 <center>
-<img src='/media/report-portal/gsk_prj3_mm/prj3_mm.png' />
+<img src='/media/report-portal/gsk_prj3_mm/prj3_mm.png' style="width:800px"/>
 </center>
 {%endif%}
 {%if 'nocmp' in report.slug %}
 <center>
-<img src='/media/report-portal/gsk_prj3_nocmp/prj3_nocmp.png' />
+<img src='/media/report-portal/gsk_prj3_nocmp/prj3_nocmp.png' style="width:800px"/>
 </center>
 {%endif%}
 
