add pics to gsk_prj3 3

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -60,8 +60,10 @@
             {%if 'above-and-beyond' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
             {%endif%}
-            {%if 'gsk' in report.slug %}
+            {%if 'l1k' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
+            {%endif%}
+            {%if 'gsk' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
             {%endif%}
             <!--  
@@ -763,8 +765,10 @@ var top_featur = $("#tbl-top_featur").DataTable( {
             {%if 'above-and-beyond' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
             {%endif%}
-            {%if 'gsk' in report.slug %}
+            {%if 'l1k' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
+            {%endif%}
+            {%if 'gsk' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
             {%endif%}
           </ul>
