add text to l1k

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -567,7 +567,7 @@
 <h2 id='dl_analysis'>Deep Learning</h2>
 <hr/>
 
-{%if report.path_text%}
+{%if report.tf_text%}
           {{report.tf_text|safe}}
           <br/><br/>
 {%endif%}
