--- a/oncoFinder2/templates/report/gsk_prj2_4d_high.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_high.html
@@ -464,7 +464,7 @@
   </div>
   <br/>
   <hr/>
-  <h4>Varialble importance plot. Pathways important for separation between MAN and no side effect in random forest model</h4> 
+  <h4>Variable importance plot. Pathways important for separation between MAN and no side effect in random forest model</h4> 
   <center>
   <img src='/media/report-portal/gsk_prj2_4d_high/varImp.EndothelialCells.bool.png' width='800px'/>
   <h4>Endothelial Cells</h4>
@@ -485,67 +485,126 @@
   
   </center>
   
-  <!-- VENN FOR PAS -->   
+ <!-- VENN FOR PAS -->   
 <hr/>
-<h4>Whole Dataset</h4>   
+<h4>Whole Dataset</h4>
+<h5>Endothelial Cells</h5>   
    <table style='text-align:center;'>
       <tr>
        <td>
-       <div id="venn_gene_ec-whole" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
-       EC
+       <div id="venn_gene_ec-whole_up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up-regulated
        </td>
        <td>
-       <div id="venn_gene_sm-whole" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
-       SM
+       <div id="venn_gene_ec-whole_down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down-regulated
        </td>
       </tr>
     </table>
-    <div id="venn_gene_dinamic_whole" class="" style="max-width:1000px;"></div>      
+    <div id="venn_gene_dinamic_whole_ec" class="" style="max-width:1000px;"></div>
+<br/><br/>    
+<h5>Smooth Muscle</h5>   
+   <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_gene_sm-whole_up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up-regulated
+       </td>
+       <td>
+       <div id="venn_gene_sm-whole_down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down-regulated
+       </td>
+      </tr>
+    </table>
+    <div id="venn_gene_dinamic_whole_sm" class="" style="max-width:1000px;"></div>       
     
 <!-- VENN FOR DEEP LEARNING -->   
 <hr/>
 <h4>Extended Dataset</h4>   
+<h5>Endothelial Cells</h5>   
    <table style='text-align:center;'>
       <tr>
        <td>
-       <div id="venn_gene_ec-extended" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
-       EC
+       <div id="venn_gene_ec-extended_up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up-regulated
        </td>
        <td>
-       <div id="venn_gene_sm-extended" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
-        SM
+       <div id="venn_gene_ec-extended_down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down-regulated
        </td>
       </tr>
     </table>
-    <div id="venn_gene_dinamic_extended" class="" style="max-width:1000px;"></div>   
+    <div id="venn_gene_dinamic_extended_ec" class="" style="max-width:1000px;"></div>
+<br/><br/>    
+<h5>Smooth Muscle</h5>   
+   <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_gene_sm-extended_up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up-regulated
+       </td>
+       <td>
+       <div id="venn_gene_sm-extended_down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down-regulated
+       </td>
+      </tr>
+    </table>
+    <div id="venn_gene_dinamic_extended_sm" class="" style="max-width:1000px;"></div>
 
 <script>
 $(document).ready(function(){
-drawVennWithData({{report.id}}, 'venn_gene_ec-whole', '', 
-		[{'id': 'toppath_ec_w', 'sets': ['Top pathways'], 'size':406},
-		 {'id': 'topprobe_ec_w', 'sets': ['Top probes in deap-learned'], 'size':83},
-		 {'id': 'toppath_topprobe_ec_w', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 32},],
-		 'venn_gene_dinamic_whole');
+/////////////////////// WHOLE
+//ec up
+drawVennWithData({{report.id}}, 'venn_gene_ec-whole_up', '', 
+		[{'id': 'toppath_ec_w_up', 'sets': ['Top pathways'], 'size':213},
+		 {'id': 'topprobe_ec_w_up', 'sets': ['Top probes in deap-learned'], 'size':42},
+		 {'id': 'toppath_topprobe_ec_w_up', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 16},],
+		 'venn_gene_dinamic_whole_ec');
+//ec down
+drawVennWithData({{report.id}}, 'venn_gene_ec-whole_down', '', 
+		[{'id': 'toppath_ec_w_down', 'sets': ['Top pathways'], 'size':193},
+		 {'id': 'topprobe_ec_w_down', 'sets': ['Top probes in deap-learned'], 'size':41},
+		 {'id': 'toppath_topprobe_ec_w_down', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 16},],
+		 'venn_gene_dinamic_whole_ec');
+//sm up
+drawVennWithData({{report.id}}, 'venn_gene_sm-whole_up', '', 
+		[{'id': 'toppath_sm_w_up', 'sets': ['Top pathways'], 'size':207},
+		 {'id': 'topprobe_sm_w_up', 'sets': ['Top probes in deap-learned'], 'size':51},
+		 {'id': 'toppath_topprobe_sm_w_up', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 13},],
+		 'venn_gene_dinamic_whole_sm');
+//sm down
+drawVennWithData({{report.id}}, 'venn_gene_sm-whole_down', '', 
+		[{'id': 'toppath_sm_w_down', 'sets': ['Top pathways'], 'size':208},
+		 {'id': 'topprobe_sm_w_down', 'sets': ['Top probes in deap-learned'], 'size':32},
+		 {'id': 'toppath_topprobe_sm_w_down', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 10},],
+		 'venn_gene_dinamic_whole_sm');
 
-drawVennWithData({{report.id}}, 'venn_gene_sm-whole', '', 
-		[{'id': 'toppath_sm_w', 'sets': ['Top pathways'], 'size':415},
-		 {'id': 'topprobe_sm_w', 'sets': ['Top probes in deap-learned'], 'size':83},
-		 {'id': 'toppath_topprobe_sm_w', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 23},],
-		 'venn_gene_dinamic_whole');
 
-
-
-drawVennWithData({{report.id}}, 'venn_gene_ec-extended', '', 
-		[{'id': 'toppath_ec_e', 'sets': ['Top pathways'], 'size':294},
-		 {'id': 'topprobe_ec_e', 'sets': ['Top probes in deap-learned'], 'size':83},
-		 {'id': 'toppath_topprobe_ec_e', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 22},],
-		 'venn_gene_dinamic_extended');
-
-drawVennWithData({{report.id}}, 'venn_gene_sm-extended', '', 
-		[{'id': 'toppath_sm_e', 'sets': ['Top pathways'], 'size':294},
-		 {'id': 'topprobe_sm_e', 'sets': ['Top probes in deap-learned'], 'size':86},
-		 {'id': 'toppath_topprobe_sm_e', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 22},],
-		 'venn_gene_dinamic_extended');
+////////////////// EXTENDED
+//ec up
+drawVennWithData({{report.id}}, 'venn_gene_ec-extended_up', '', 
+		[{'id': 'toppath_ec_e_up', 'sets': ['Top pathways'], 'size':147},
+		 {'id': 'topprobe_ec_e_up', 'sets': ['Top probes in deap-learned'], 'size':47},
+		 {'id': 'toppath_topprobe_ec_e_up', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 12},],
+		 'venn_gene_dinamic_extended_ec');
+//ec down
+drawVennWithData({{report.id}}, 'venn_gene_ec-extended_down', '', 
+		[{'id': 'toppath_ec_e_down', 'sets': ['Top pathways'], 'size':147},
+		 {'id': 'topprobe_ec_e_down', 'sets': ['Top probes in deap-learned'], 'size':36},
+		 {'id': 'toppath_topprobe_ec_e_down', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 10},],
+		 'venn_gene_dinamic_extended_ec');
+//sm up
+drawVennWithData({{report.id}}, 'venn_gene_sm-extended_up', '', 
+		[{'id': 'toppath_sm_e_up', 'sets': ['Top pathways'], 'size':154},
+		 {'id': 'topprobe_sm_e_up', 'sets': ['Top probes in deap-learned'], 'size':40},
+		 {'id': 'toppath_topprobe_sm_e_up', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 13},],
+		 'venn_gene_dinamic_extended_sm');
+//sm down
+drawVennWithData({{report.id}}, 'venn_gene_sm-extended_down', '', 
+		[{'id': 'toppath_sm_e_down', 'sets': ['Top pathways'], 'size':140},
+		 {'id': 'topprobe_sm_e_down', 'sets': ['Top probes in deap-learned'], 'size':46},
+		 {'id': 'toppath_topprobe_sm_e_down', 'sets': ['Top pathways', 'Top probes in deap-learned'], 'size': 9},],
+		 'venn_gene_dinamic_extended_sm');
 
 });
 </script>
