--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -246,7 +246,7 @@
      {%else%}
      <div role="tabpanel" class="tab-pane fade " id="{{gene}}_tab">
      {%endif%}
-     <div id="{{gene}}" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading box plot...</div>
+     <div id="{{gene}}" style="min-width: 800px; height: 400px; max-width: 90%; margin: 0 auto">Loading box plot...</div>
    
      </div>
     {%endfor%}
